kubernetes/ingress/blue-green-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
  - host: blue.example.com
    http:
      paths:
      - backend:
          serviceName: blue-website
          servicePort: 80
  - host: green.example.com
    http:
      paths:
      - backend:
          serviceName: green-website
          servicePort: 80
status:
  loadBalancer: {}
